--- a/springtask/pom.xml
+++ b/springtask/pom.xml
@@ -22,8 +22,27 @@
     <packaging>war</packaging>
 
     <dependencies>
+        <!--kafka客户端-->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <!--kafka流支持-->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>1.1.0</version>
+        </dependency>
 
     <!-- spring需要的jar包 -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>4.2.6.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
